Adição do 2° paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores eaque culpa eligendi reprehenderit sapiente qui, temporibus facere molestias possimus minima, perferendis aut a sit voluptas ab odit odio voluptatem at.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam maxime natus explicabo cumque. Cum dicta quod doloremque. Quod nostrum totam, ea, aut autem molestiae ex quasi magnam, ipsa repellendus adipisci.</p>
 </body>
 </html>
